--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register tests/**/*.test.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bitset": "^5.1.1"
+    "bitset": "^5.1.1",
+    "mocha": "^9.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.12.0",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   }
